adds latest jpms trellis snapshot build to libs adds junit gradle plugin adds codecov to travis